Update executePause.sh